<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    tools:context="me.abhishekraj.portfolioapp.MainActivity">
    <TextView
        style="@style/textViewStyle"
        android:layout_height="wrap_content"
        android:text="@string/textViewText"/>

    <Button
        android:id="@+id/popularMovies"
        style="@style/buttonStyle"
        android:layout_height="wrap_content"
        android:text="@string/popularMovies"/>

    <Button
        android:id="@+id/stockHawk"
        style="@style/buttonStyle"
        android:layout_height="wrap_content"
        android:text="@string/stackHawk"/>

    <Button
        android:id="@+id/buildItBigger"
        style="@style/buttonStyle"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"/>

    <Button
        android:id="@+id/makeYourAppMaterial"
        style="@style/buttonStyle"
        android:layout_height="wrap_content"
        android:text="@string/makeYourAppMaterial"/>

    <Button
        android:id="@+id/goUbiquitous"
        style="@style/buttonStyle"
        android:layout_height="wrap_content"
        android:text="@string/goUbiquitous"/>

    <Button
        android:id="@+id/capstone"
        style="@style/buttonStyle"
        android:layout_height="wrap_content"
        android:text="@string/capstone"/>
</LinearLayout>
